--- a/js-projeto-de-vida-codigo-base/style.css
+++ b/js-projeto-de-vida-codigo-base/style.css
@@ -64,6 +64,10 @@ body {
     border-bottom: 4px solid var(--verde);
 }
 
+.aba-textos{
+    background-color: var(--texto-fundo);
+}
+
 @media screen and (min-width: 768px) {
 
     .botoes {
